posiGen_FullsendBox/src/objects/PM_Tool_V2__c.object
<CustomObject>
    <fields>
        <fullName>Utility_Final_Appr_Com_Date__c</fullName>
        <formula>Project_PV_Install__r.Utility_Final_Approval_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility Final Approval Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility_Final_Appr_Req_Date__c</fullName>
        <formula>Project_PV_Install__r.Utility_Final_Approval_Requested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility Final Approval Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility_Init_Appr_Rec_Date__c</fullName>
        <formula>Project_PV_Feasibility__r.NMIA_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility Initial Approval Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility_Init_Appr_Sub_Date__c</fullName>
        <formula>Project_PV_Feasibility__r.NMIA_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility Initial Approval Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <formula>IF(Opportunity__r.Electricity_Provider__r.IsPersonAccount = true, Opportunity__r.Electricity_Provider__r.FirstName+&apos; &apos;+Opportunity__r.Electricity_Provider__r.LastName, Opportunity__r.Electricity_Provider__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Scope_Approved__c</fullName>
        <formula>Project_EE_Upgrade__r.Work_Scope_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Scope Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Scope_Submitted__c</fullName>
        <formula>Project_EE_Upgrade__r.Work_Scope_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Scope Submitted</label>
        <type>Date</type>
    </fields>
    <label>PM Tool V2</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>State__c</columns>
        <columns>Contract_Approved_Date__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PM Tool V2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PM Tools V2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>